switch java version to 11(Course Requirements) test case for ChannelInfo/VideoInfo/ChannelService